<resources>
    <string name="app_name">WhatsUp</string>
    <string name="email">Enter Your Email</string>
    <string name="password">Enter Your PassWord</string>
    <string name="save">Save</string>
    <string name="welcome">Welcom To WhatsUp</string>
    <string name="sign">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="email_edit">Enter Your Email</string>
    <string name="password_">Enter  Your Password</string>
    <string name="name">Enter  Your Name</string>
    <string name="logout">Log Out</string>
    <string name="setting">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="namesetting">Full Name</string>
    <string name="emailsetting">Email</string>
    <string name="changename">Edit Name</string>
    <string name="changepicsetting">Change Picture</string>
    <string name="pic">Change Picture</string>
    <string name="save1">Save</string>
</resources>